work sample update

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card">
-                        <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="img/brochure/Slide10.PNG" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">Brochure</h4>
                             <p class="card-text">A small book or magazine containing pictures and information about a product or service. Usually folded and only includes summary information that is promotional in character.</p>
@@ -191,7 +191,7 @@
 
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="img/ppt/Slide12.PNG" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">Power Point Presentations</h4>
                             <p class="card-text">A PowerPoint slideshow (PPT) is a presentation created on software from Microsoft that allows users to add audio, visual and audio/visual features to a presentation.</p>
@@ -203,23 +203,8 @@
                 </div>
 
                 <div class="col-lg-4 mt-4">
-                    <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/portfolioImage3.jpg" alt="Card image" style="width:100%">
-                        <div class="card-body">
-                            <h4 class="card-title">Product Landing Page</h4>
-                            <p class="card-text">A product landing page is a post-click page created specifically to convince a visitor to convert on a product-related offer. Design-wise, it's similar a traditional landing page.</p>
-                            <div class="text-center">
-                                <a href="LandingPage.html" class="btn btn-success">Work Sample</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <br>
-            <div class="row">
-                <div class="col-lg-4 mt-4">
                     <div class="card">
-                        <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="img/posters/Slide6.PNG" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">Banner</h4>
                             <p class="card-text">Banners are used primarily for an advertising purpose to publicize the advertiser's products or services. Its most common use is for the promotion of brands, events, products or websites.</p>
@@ -229,10 +214,27 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-lg-4 mt-4">
+                    <div class="card portfolioContent">
+                        <img class="card-img-top" src="img/imag2-06.jpg" alt="Card image" style="width:100%">
+                        <div class="card-body">
+                            <h4 class="card-title">Product Landing Page</h4>
+                            <p class="card-text">A product landing page is a post-click page created specifically to convince a visitor to convert on a product-related offer. Design-wise, it's similar a traditional landing page.</p>
+                            <div class="text-center">
+                                <a href="LandingPage.html" class="btn btn-success">Work Sample</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+              
 
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="img/imag2-04.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">LOGO</h4>
                             <p class="card-text">Logos serve to represent a given organization or company through a visual image that can be easily understood and recognized. Logos are created in consultation with a company and marketing experts.</p>
@@ -245,7 +247,7 @@
 
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/portfolioImage3.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="img/imag2-05.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">Flyer</h4>
                             <p class="card-text">A Flyer is usually a single, unfolded printed sheet that is used to draw attention to an event, service, product or idea. A flyer usually contains a very simple message that can be conveyed quickly.</p>
